$Id$

-- 2008-04-21 version drupal-6-x-1-2.1
* Usability improvements: FCKeditor will now inform you in the administration section about
  possible misconfiguration

-- 2008-04-04 version drupal-6-x-1-2.1
* fixed #240608: removed javascript errors on fields without teaser break
* fixed issue with default list of fields where simplified toolbar should appear (Global Profile)

-- 2008-04-02 version drupal-6-x-1-2

* fixed #240230 (teaser was stripped when FCKeditor has been enabled and toogle was disabled)
* minor improvements in documentation, extended default ignore list
* fixed #238944 (body was stripped in preview mode when break tag was used)
* fixed E_NOTICE errors
* fixed problems with excl_mode / excl_list in global profile
* fixed issues with default inclusion or exclusion mode set to "include" when creating new profile

-- 2008-03-18 version drupal-6-x-1-1
* fixed issues with switching from text to fckeditor in the toogle, 
  all previous content within the body was lost
* FCKeditor now appears for super user even if "access fckeditor" permissions are not yet assigned.
  (the Advanced profile for authenticated users is assigned)
* corrected readme file
* fixed issues with Internet Explorer 
  (Object required error when "rich text editor toggle" was set to false)
* fixed issues with invalid validation of excluded fields
  (numbers are also allowed in IDs)
* extended the global list of fields where FCKeditor shouldn't appear
* added possibility to define custom javascript configuration
* instant IMCE integration
* improved handling resizable fields when FCKeditor is disabled

-- 2008-02-12 version drupal-6-x-1-1-beta
* fixed issues with handling multiple user profiles, it is now possible
 to define role precedence
* introduced the global profile, it is possible to enable/disable FCKeditor globally
 for all profiles in one place
* it is possible to use paths and fields to exclude/include FCKeditor to have better control
 over where FCKeditor should appear