@@ -1,5 +1,8 @@
 $Id$
 
+-- 2008-04-22 version drupal-6-x-1-2.1
+* FCKeditor is now compatible with Image Assist module (http://drupal.org/project/img_assist)
+
 -- 2008-04-21 version drupal-6-x-1-2.1
 * Usability improvements: FCKeditor will now inform you in the administration section about
   possible misconfiguration
